style/custom.css
/* ... */
table#explaincaps tbody>tr.selectedrow:nth-child(odd)>td,
table#defineroletable tbody>tr.selectedrow:nth-child(odd)>td,
table.grading-report tbody>tr.selectedrow:nth-child(odd)>td,
table#listdirectories tbody>tr.selectedrow:nth-child(odd)>td,
table.rolecaps tbody>tr.selectedrow:nth-child(odd)>td,
table.userenrolment tbody>tr.selectedrow:nth-child(odd)>td,
table#form tbody>tr.selectedrow:nth-child(odd)>td,
form#movecourses table tbody>tr.selectedrow:nth-child(odd)>td,
#page-admin-course-index .editcourse tbody>tr.selectedrow:nth-child(odd)>td,
.forumheaderlist tbody>tr.selectedrow:nth-child(odd)>td,
table.flexible tbody>tr.selectedrow:nth-child(odd)>td,
.generaltable tbody>tr.selectedrow:nth-child(odd)>td,
table#explaincaps tbody>tr.selectedrow:nth-child(odd)>th,
table#defineroletable tbody>tr.selectedrow:nth-child(odd)>th,
table.grading-report tbody>tr.selectedrow:nth-child(odd)>th,
table#listdirectories tbody>tr.selectedrow:nth-child(odd)>th,
table.rolecaps tbody>tr.selectedrow:nth-child(odd)>th,
table.userenrolment tbody>tr.selectedrow:nth-child(odd)>th,
table#form tbody>.selectedrow:nth-child(odd)>th,
form#movecourses table tbody>tr.selectedrow:nth-child(odd)>th,
#page-admin-course-index .editcourse tbody>tr.selectedrow:nth-child(odd)>th,
.forumheaderlist tbody>tr.selectedrow:nth-child(odd)>th,
table.flexible tbody>tr.selectedrow:nth-child(odd)>th,
.generaltable tbody>tr.selectedrow:nth-child(odd)>th {
	background-color: #fdb;
}

.user-enroller-panel .uep-search-results .users tbody tr:hover>td,
table.grading-report tbody tr:hover>td,
.forumheaderlist tbody tr:hover>td,
.generaltable tbody tr:hover>td,
table.flexible tbody tr:hover>td,
.category_subcategories tbody tr:hover>td,
table#modules tbody tr:hover>td,
table#permissions tbody tr:hover>td,
.user-enroller-panel .uep-search-results
.users tbody tr:hover>th,
table.grading-report tbody tr:hover>th,
.forumheaderlist tbody tr:hover>th,
.generaltable tbody tr:hover>th,
table.flexible tbody tr:hover>th,
.category_subcategories tbody tr:hover>th,
table#modules tbody tr:hover>th,
table#permissions tbody tr:hover>th {
	background-color: #f2f2f2;
}

.user-enroller-panel .uep-search-results .users tbody tr.selectedrow:hover>td,
table.grading-report tbody tr.selectedrow:hover>td,
.forumheaderlist tbody tr.selectedrow:hover>td,
.generaltable tbody tr.selectedrow:hover>td,
table.flexible tbody tr.selectedrow:hover>td,
.category_subcategories tbody tr.selectedrow:hover>td,
table#modules tbody tr.selectedrow:hover>td,
table#permissions tbody tr.selectedrow:hover>td,
.user-enroller-panel .uep-search-results
.users tbody tr.selectedrow:hover>th,
table.grading-report tbody tr.selectedrow:hover>th,
.forumheaderlist tbody tr.selectedrow:hover>th,
.generaltable tbody tr.selectedrow:hover>th,
table.flexible tbody tr.selectedrow:hover>th,
.category_subcategories tbody tr.selectedrow:hover>th,
table#modules tbody tr.selectedrow:hover>th,
table#permissions tbody tr.selectedrow:hover>th {
	background-color: #ffd;
}

.calendar-event-panel .yui3-overlay-content h2.eventtitle{
	font-size: 1.6em;
}

#dndupload-status {
	position: absolute;
}

.path-grade-report-grader .right_scroller td select {
	padding: 0;
	margin: 0;
	height: 22px;
	line-height: 22px;
}

/** MDL-31679 gradereport_grader: Add a horizontal scroll bar to the top of the grader report */
#page-grade-report-grader-index .topscrollcontent {
    height: 1px;
}

body.path-grade-report-grader #user-grades {
    margin-top: 4px;
}

#page-footer .performanceinfo{
	margin: 0;
}

#page-footer .performanceinfo .cachesused .cache-definition-stats{
	color: black;
}


/* Phones and tablets */
@media (max-width: 979px) {
	body{
		padding-top: 0;
	}
	.navbar-fixed-top {
		margin-bottom: 0;
	}
    .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus, .dropdown-submenu:hover>a, .dropdown-submenu:focus>a {
        color: white;
    }
    .nav-collapse.collapse {
		height: auto;
		overflow: visible;
	}
	#main_navigation .nav {
		padding: 0;
	}
	#main_navigation .nav-collapse .dropdown-menu a {
		background-color: transparent;
		color: [[setting:color3]];
		font-weight: normal;
	}
	#main_navigation .nav-collapse .dropdown-menu a:hover {
		font-weight: bold;
	}
}

/* HOTPOT workarround */
.path-mod-hotpot #region-main {
	margin: 0;
}

/* Phones only */
@media (max-width: 767px){
    #page{
        padding: 8px 0 0 0;
    }
    #page-footer{
        margin-left: -20px;
        margin-right: -20px;
    }
    #main_navigation {
		margin: 0 -20px;
    }
	.nav-collapse, .nav-collapse.collapse {
		height: 0;
		overflow: hidden;
	}
	.nav-collapse.active, .nav-collapse.active{
		height: auto;
		overflow: visible;
	}
}

@media (min-width: 979px) {
	/* Better grader */
	body.blocks_collapsed.super_collapse{
		height: 100%;
	}

	body.blocks_collapsed.super_collapse #page-footer,
	body.blocks_collapsed.super_collapse #title-header,
	body.blocks_collapsed.super_collapse #page-header,
	body.blocks_collapsed.super_collapse .urlselect,
	body.blocks_collapsed.super_collapse .paging,
	body.blocks_collapsed.super_collapse h2{
		display: none;
	}

	body.blocks_collapsed.super_collapse #page{
		max-width: none;
		padding: 0;
		margin-top: 36px;
	}

	body.blocks_collapsed.super_collapse table.generaltable,
	body.blocks_collapsed.super_collapse div.gradeparent>table#user-grades {
		margin-top: 77px;
		top: 0;
		left: 0;
		position: absolute;
		width: 100%;
        /*height: 100%;*/
		max-height: 100%;
		background-color: white;
		font-size: 12px;
	}


	body.blocks_collapsed.super_collapse #main_navigation {
		position: fixed;
		z-index: 4030;
		top: 41px;
		width: 100%;
	}
}

/* All except phones */
@media (min-width: 767px){
	#page-footer-top .social-icons{
		text-align: left;
	}
}

/* Custom CSS Settings
-------------------------*/
[[setting:customcss]]

